Fix customer name overflow in WeightVisualization and StakesVisualization
Moved their CSS to shared.scss as they used the same exact classes.

--- a/frontend/src/components/CustomerStakesVisualization.module.scss
+++ b/frontend/src/components/CustomerStakesVisualization.module.scss
@@ -7,23 +7,3 @@
   text-align: start;
   gap: 10px;
 }
-
-.customer {
-  @extend .layout-row;
-  gap: 5px;
-  align-items: center;
-
-  &.differsTooMuch > span {
-    color: $COLOR_RASPBERRY;
-  }
-
-  & > .name {
-    flex-grow: 1;
-    margin-right: 8px;
-  }
-
-  & > .percentage {
-    @extend .typography-pre-title;
-    color: $COLOR_AZURE;
-  }
-}
